fix overflow on small heights

--- a/components/Landing/Landing.module.css
+++ b/components/Landing/Landing.module.css
@@ -6,7 +6,7 @@
 
     padding: 0px 16px;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     
     background-color: black;
 }
@@ -47,6 +47,9 @@
     height: 230px;
     width: 230px;
     padding: 5px;
+}
+.button {
+    margin: 20px 0;
 }
 
 
